// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter active components render properly 1`] = `
<div
  class="toolbar-pf-results row"
>
  <div
    class="col-sm-12"
  >
    <p
      class="filter-pf-active-label"
      title="Active Filters:"
    />
    <ul
      class="list-inline"
    >
      <li
        class=""
        label="Name: John"
      >
        <span
          class="label label-info"
        >
          <a
            class="pf-remove-button"
            href="#"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-close"
            />
            <span
              class="sr-only"
            >
              Remove
            </span>
          </a>
        </span>
      </li>
      <li
        class=""
        label="Address: Westford"
      >
        <span
          class="label label-info"
        >
          <a
            class="pf-remove-button"
            href="#"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-close"
            />
            <span
              class="sr-only"
            >
              Remove
            </span>
          </a>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Filter categories renders properly 1`] = `
<div
  class="filter-pf form-group"
>
  <div
    class="filter-pf-fields"
  >
    <div
      class="input-group"
    >
      <div
        class="input-group-btn"
      >
        <div
          class="dropdown btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-default"
            id="filterFieldTypeMenu"
            role="button"
            type="button"
          >
            Car 
            <span
              class="caret"
            />
          </button>
          <ul
            aria-labelledby="filterFieldTypeMenu"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Name
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Address
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Birth Month
              </a>
            </li>
            <li
              class="selected"
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Car
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="filter-pf-category-select"
      >
        <div
          class="filter-pf-select"
        >
          <div
            class="dropdown btn-group"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="filter-pf-select-dropdown filter-selected dropdown-toggle btn btn-default"
              id="filterCategoryMenu"
              role="button"
              type="button"
            >
              Subaru 
              <span
                class="caret"
              />
            </button>
            <ul
              aria-labelledby="filterCategoryMenu"
              class="dropdown-menu"
              role="menu"
            >
              <li
                class="selected"
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Subaru
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Toyota
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="filter-pf-select"
        >
          <div
            class="dropdown btn-group"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="filter-pf-category-select-value filter-pf-select-dropdown filter-selected dropdown-toggle btn btn-default"
              id="filterCategoryMenu"
              role="button"
              type="button"
            >
              Outback 
              <span
                class="caret"
              />
            </button>
            <ul
              aria-labelledby="filterCategoryMenu"
              class="dropdown-menu"
              role="menu"
            >
              <li
                class="selected"
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Outback
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Crosstrek
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Impreza
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filter input renders properly 1`] = `
<div
  class="filter-pf form-group"
>
  <div
    class="filter-pf-fields"
  >
    <div
      class="input-group"
    >
      <div
        class="input-group-btn"
      >
        <div
          class="dropdown btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-default"
            id="filterFieldTypeMenu"
            role="button"
            type="button"
          >
            Name 
            <span
              class="caret"
            />
          </button>
          <ul
            aria-labelledby="filterFieldTypeMenu"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class="selected"
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Name
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Address
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Birth Month
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Car
              </a>
            </li>
          </ul>
        </div>
      </div>
      <input
        class="form-control"
        id="filterInput"
        placeholder="Filter by Name"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Filter renders properly in a Toolbar 1`] = `
<div
  class="container-fluid"
>
  <div
    class="toolbar-pf row"
  >
    <div
      class="col-sm-12"
    >
      <form
        class="toolbar-pf-actions"
      >
        <div
          class="filter-pf form-group toolbar-pf-filter"
        >
          <div
            class="filter-pf-fields"
          >
            <div
              class="input-group"
            >
              <div
                class="input-group-btn"
              >
                <div
                  class="dropdown btn-group"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-default"
                    id="filterFieldTypeMenu"
                    role="button"
                    type="button"
                  >
                    Name 
                    <span
                      class="caret"
                    />
                  </button>
                  <ul
                    aria-labelledby="filterFieldTypeMenu"
                    class="dropdown-menu"
                    role="menu"
                  >
                    <li
                      class="selected"
                      role="presentation"
                    >
                      <a
                        href="#"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Name
                      </a>
                    </li>
                    <li
                      class=""
                      role="presentation"
                    >
                      <a
                        href="#"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Address
                      </a>
                    </li>
                    <li
                      class=""
                      role="presentation"
                    >
                      <a
                        href="#"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Birth Month
                      </a>
                    </li>
                    <li
                      class=""
                      role="presentation"
                    >
                      <a
                        href="#"
                        role="menuitem"
                        tabindex="-1"
                      >
                        Car
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <input
                class="form-control"
                id="filterInput"
                placeholder="Filter by Name"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Filter select renders properly 1`] = `
<div
  class="filter-pf form-group"
>
  <div
    class="filter-pf-fields"
  >
    <div
      class="input-group"
    >
      <div
        class="input-group-btn"
      >
        <div
          class="dropdown btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="dropdown-toggle btn btn-default"
            id="filterFieldTypeMenu"
            role="button"
            type="button"
          >
            Birth Month 
            <span
              class="caret"
            />
          </button>
          <ul
            aria-labelledby="filterFieldTypeMenu"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Name
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Address
              </a>
            </li>
            <li
              class="selected"
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Birth Month
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Car
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="filter-pf-select"
      >
        <div
          class="dropdown btn-group"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="filter-pf-select-dropdown filter-selected dropdown-toggle btn btn-default"
            id="filterCategoryMenu"
            role="button"
            type="button"
          >
            May 
            <span
              class="caret"
            />
          </button>
          <ul
            aria-labelledby="filterCategoryMenu"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                January
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                February
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                March
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                April
              </a>
            </li>
            <li
              class="selected"
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                May
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                June
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                July
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                August
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                September
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                October
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                November
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                December
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
